# EmurgoCSA

./: README.md
MathBounty/: MathBountyV2.cabal
MathBounty/src/: ExpectedFailure.hs  HedgehogSample.hs  OnChain.hs  SpecTesting.hs  UnitTesting.hs
NIX/MathBounty/: cabal.project  flake.nix
Plutarch/JustValidators/: PJustValidators.cabal  cabal.project
Plutarch/JustValidators/src/: PAlwaysSucceedandFailV2.hs
Plutarch/PTemplate/: hello-plutarch.cabal
Plutarch/PTemplate/src/: Demo.hs  Eval.hs  Lib.hs  PAlwaysSucceedandFail.hs  SignedBy.hs
S04/: package-lock.json
S04/src/: always_succeeds.ts
S08/JustValidators/: JustValidators.cabal
S08/JustValidators/src/: AlwaysSucceedandFailV2o.hs  CustomTypedValidatorV2o.hs  TestAPI.hs  TestDAL.hs  TestDALps.hs
S08/MathBounty/: MathBountyV2.cabal
S08/MathBounty/src/: BountyAPI.hs
S09/JustValidators/: JustValidators.cabal
S09/JustValidators/src/: TestAPITypes.hs
