cabal-version:      2.4
name:               PJustValidatorsV2
version:            1.1.0.0
synopsis:           Plutarch JustValidators bootsrap cabal project
homepage:           https://www.vortecsla.com/plutarch
license:            MIT
license-file:       LICENSE
author:             Roberto J. Cerrud
maintainer:         vortecsmaster@vortecsla.com
category:           Education
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PAlwaysSucceedandFail 
    build-depends:    plutarch  
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
