cabal-version:      2.4
name:               JustValidatorsV2
version:            1.1.0.0
synopsis:           JustValidators bootsrap cabal project
homepage:           https://www.vortecsla.com/plutus
license:            MIT
license-file:       LICENSE
author:             Roberto J. Cerrud
maintainer:         vortecsmaster@vortecsla.com
category:           Education
extra-source-files: CHANGELOG.md

library
    exposed-modules:    AlwaysSucceedandFailV2 
                      , JustRedeemerV2
                      , CustomTypedValidatorV2
                      , TestAPI
    build-depends:      attoparsec 
                      , base ^>=4.14.1.0
                      , blaze-html
                      , blaze-markup
                      , aeson -any
                      , bytestring -any
                      , base-compat
                      , caradano-api -any
                      , containers -any
                      , data-default
                      , directory 
                      , freer-extras -any
                      , http-media
                      , lucid
                      , mtl
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , plutus-contract -any
                      , plutus-ledger -any
                      , plutus-ledger-api -any
                      , plutus-ledger-constraints -any
                      , plutus-script-utils
                      , plutus-tx -any
                      , plutus-tx-plugin -any
                      , text -any
                      , time -any
                      , lens -any
                      , serialise
                      , servant
                      , servant-server
                      , string-conversions
                      , wai
                      , warp
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
